# ames-housing-predictions

./: .gitignore  Ames.ipynb  README.md  pyproject.toml
dl/: config.py  data.py  main.py  train_functions.py
dl/objects/: model.py  scheduler.py
